--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/Media/favicon.gif">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/src/assets/main.css" rel="stylesheet">
-    <title>Vite App</title>
+    <title>Anna Ellegaard</title>
   </head>
   <body class="bg-back-100">
     <div id="app"></div>
